cb test